# mandelbrot

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: eventSystem.cxx  eventSystem.h  helpers.h
src/shaders/: fragsh.frag  julia.frag  mandelbrot.frag  vertexsh.vert
